--- a/app/globals.css
+++ b/app/globals.css
@@ -273,6 +273,7 @@ input.tittle-input {
   cursor: pointer;
 }
 .sidebar-icon {
+  cursor: pointer;
   height: 270px;
   margin-left: 20px;
   display: grid;
@@ -609,6 +610,7 @@ input.age-chekbox-input {
 }
 .hover-list0 {
   /* background: #27393c; */
+  cursor: pointer;
   padding: 10px;
   width: 132px;
   border-radius: 7px;
